Refactored overview and login page

--- a/uibuilder/bauer_planer/src/pages/login/login.html
+++ b/uibuilder/bauer_planer/src/pages/login/login.html
@@ -51,7 +51,7 @@
                   </div>
                   <input id="password" placeholder="Passwort" type="password" name="psw" >
                 </div>
-                    <div id="error" class="error">Ungültige Benutzer ID und/oder Passwort.</div>    
+                    <div id="error" class="error"></div>    
                 <div class="field field-checkbox padding-bottom--24 flex-flex align-center">
                     </div>
                 <div class="field padding-bottom--24">
