--- a/uibuilder/bauer_planer/src/pages/übersicht/übersicht.html
+++ b/uibuilder/bauer_planer/src/pages/übersicht/übersicht.html
@@ -9,16 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>bauer + planer - Übersicht</title>
+    <title>Monitoring - Übersicht</title>
 
     <!-- Custom fonts for this template-->
     <link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-            rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="../../css/styles.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
 
 </head>
 
@@ -35,7 +35,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">b+p </div>
+            <div class="sidebar-brand-text mx-3">B+P</div>
         </a>
 
         <!-- Divider -->
@@ -44,22 +44,18 @@
         <!-- Nav Item - Übersicht -->
         <li class="nav-item active">
             <a class="nav-link" href="übersicht.html">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Übersicht</span></a>
+                <i class="fas fa-home"></i>
+                <span>Übersicht</span>
+            </a>
         </li>
 
         <!-- Divider -->
-        <hr class="sidebar-divider">
-
-<!--        &lt;!&ndash; Heading &ndash;&gt;-->
-<!--        <div class="sidebar-heading">-->
-<!--            Interface-->
-<!--        </div>-->
+        <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Nutzer -->
         <li class="nav-item">
             <a class="nav-link" href="../nutzer/nutzer.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-user"></i>
                 <span>Nutzer</span>
             </a>
         </li>
@@ -75,16 +71,17 @@
         <!-- Nav Item - Monitoring -->
         <li class="nav-item">
             <a class="nav-link" href="../monitoring/monitoring.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Monitoring</span>
             </a>
         </li>
         
         <!-- Sidebar Toggler (Sidebar) -->
+        <!--
         <div class="text-center d-none d-md-inline">
             <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
-
+        -->
     </ul>
     <!-- End of Sidebar -->
 
@@ -98,40 +95,8 @@
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
                 <h1 class="h3 mb-0 text-gray-800">Übersicht</h1>
 
-                <!-- Sidebar Toggle (Topbar) -->
-                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                    <i class="fa fa-bars"></i>
-                </button>
-
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
-
-                    <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                    <li class="nav-item dropdown no-arrow d-sm-none">
-                        <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-search fa-fw"></i>
-                        </a>
-                        <!-- Dropdown - Messages -->
-                        <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
-                             aria-labelledby="searchDropdown">
-                            <form class="form-inline mr-auto w-100 navbar-search">
-                                <div class="input-group">
-                                    <input type="text" class="form-control bg-light border-0 small"
-                                           placeholder="Search for..." aria-label="Search"
-                                           aria-describedby="basic-addon2">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-primary" type="button">
-                                            <i class="fas fa-search fa-sm"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </li>
-                    
-
-                    <div class="topbar-divider d-none d-sm-block"></div>
 
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -140,9 +105,7 @@
                             Logout
                         </a>
                     </li>
-
                 </ul>
-
             </nav>
             <!-- End of Topbar -->
 
@@ -153,19 +116,31 @@
                         <!-- Page Heading -->
                         <p class="mb-4">Willkommen, <span id="fullName" class="mb-4"></span></p>
 
-                        <p class="mb-4">Anzahl der Nutzer: <span id="numberOfUsers" class="mb-4"></span></p>
+                        <p class="mb-4">Anzahl der im System hinterlegten Nutzer: <span id="numberOfUsers" class="mb-4"></span></p>
 
-                        <p class="mb-4">Anzahl der Maschinen: <span id="numberOfMachines" class="mb-4"></span></p>
+                        <p class="mb-4">Anzahl der im System hinterlegten Maschinen: <span id="numberOfMachines" class="mb-4"></span></p>
 
                         <p class="mb-4">Stromkosten pro kWh: <span id="powerCosts" class="mb-4"></span> €</p>
 
-                        <form>
+                        <form class="mb-4">
                             <div class="form-group">
                                 <label for="inputPowerCosts">Stromkosten ändern:</label>
-                                <input type="number" class="form-control" id="inputPowerCosts" placeholder="€" style="width: 10%;">
+                                <div style="display:flex;">
+                                    <input type="number" class="form-control" id="inputPowerCosts" placeholder="€" step="0.1" style="flex: 0.07;">
+                                    <div><p style="height: 100%; display: flex; align-items: center; margin-left: 10px;">€</p></div>
+                                </div>
                             </div>
                             <button  onclick="changePowerCosts()" type="button" class="btn btn-primary">Übernehmen</button>
                         </form>
+
+                        <p class="mb-4">Liste der aktuell angemeldeten Nutzer und der aktiven Maschinen:</p>
+
+                        <table id="dataTable" class="mb-4"
+                            data-pagination="true"
+                            data-search="false"                   
+                            data-height="75%"
+                            data-show-footer="true">
+                        </table>
                     </div>
                 </div>
             </div>
@@ -219,6 +194,9 @@
 <script src="../../vendor/jquery/jquery.min.js"></script>
 <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+<!-- Bootstrap Table-->
+<script src="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.js"></script>
+
 <!-- Core plugin JavaScript-->
 <script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
 
@@ -226,6 +204,7 @@
 <script src="../../../uibuilder/vendor/socket.io/socket.io.js">/* REQUIRED: Socket.IO is loaded only once for all instances. Without this, you don't get a websocket connection */</script>
 <script src="../../uibuilderfe.min.js">/* REQUIRED: remove 'min.' to use dev version */</script>
 <script src="übersicht.js">/* OPTIONAL: Put your custom code here */</script>
+<script src="../../generalFunctions.js"></script>
 
 <!-- #endregion -->
 
