Refactored user and machine pages

--- a/uibuilder/bauer_planer/src/pages/monitoring/monitoring.html
+++ b/uibuilder/bauer_planer/src/pages/monitoring/monitoring.html
@@ -37,11 +37,11 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="../übersicht/übersicht.html">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="übersicht.html">
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">b+p </div>
+            <div class="sidebar-brand-text mx-3">B+P</div>
         </a>
 
         <!-- Divider -->
@@ -50,22 +50,18 @@
         <!-- Nav Item - Übersicht -->
         <li class="nav-item">
             <a class="nav-link" href="../übersicht/übersicht.html">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Übersicht</span></a>
+                <i class="fas fa-home"></i>
+                <span>Übersicht</span>
+            </a>
         </li>
 
         <!-- Divider -->
-        <hr class="sidebar-divider">
-
-        <!--        &lt;!&ndash; Heading &ndash;&gt;-->
-        <!--        <div class="sidebar-heading">-->
-        <!--            Interface-->
-        <!--        </div>-->
+        <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Nutzer -->
         <li class="nav-item">
             <a class="nav-link" href="../nutzer/nutzer.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-user"></i>
                 <span>Nutzer</span>
             </a>
         </li>
@@ -73,24 +69,25 @@
         <!-- Nav Item - Maschinen -->
         <li class="nav-item">
             <a class="nav-link" href="../maschinen/maschinen.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-cog"></i>
                 <span>Maschinen</span>
             </a>
         </li>
 
         <!-- Nav Item - Monitoring -->
         <li class="nav-item active">
-            <a class="nav-link" href="monitoring.html">
-                <i class="fas fa-fw fa-cog"></i>
+            <a class="nav-link" href="../monitoring/monitoring.html">
+                <i class="fas fa-tachometer-alt"></i>
                 <span>Monitoring</span>
             </a>
         </li>
-
-                <!-- Sidebar Toggler (Sidebar) -->
-                <div class="text-center d-none d-md-inline">
-                    <button class="rounded-circle border-0" id="sidebarToggle"></button>
-                </div>
-
+        
+        <!-- Sidebar Toggler (Sidebar) -->
+        <!--
+        <div class="text-center d-none d-md-inline">
+            <button class="rounded-circle border-0" id="sidebarToggle"></button>
+        </div>
+        -->
     </ul>
     <!-- End of Sidebar -->
 
