--- a/uibuilder/bauer_planer/src/pages/maschinen/maschinen_anlegen.html
+++ b/uibuilder/bauer_planer/src/pages/maschinen/maschinen_anlegen.html
@@ -9,13 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>bauer + planer - Maschinen</title>
+    <title>Monitoring - Maschine anlegen</title>
 
     <!-- Custom fonts for this template-->
     <link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-            rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="../../css/styles.min.css" rel="stylesheet">
@@ -37,7 +35,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">b+p </div>
+            <div class="sidebar-brand-text mx-3">B+P</div>
         </a>
 
         <!-- Divider -->
@@ -46,30 +44,26 @@
         <!-- Nav Item - Übersicht -->
         <li class="nav-item">
             <a class="nav-link" href="../übersicht/übersicht.html">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Übersicht</span></a>
+                <i class="fas fa-home"></i>
+                <span>Übersicht</span>
+            </a>
         </li>
 
         <!-- Divider -->
-        <hr class="sidebar-divider">
-
-        <!--        &lt;!&ndash; Heading &ndash;&gt;-->
-        <!--        <div class="sidebar-heading">-->
-        <!--            Interface-->
-        <!--        </div>-->
+        <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Nutzer -->
         <li class="nav-item">
             <a class="nav-link" href="../nutzer/nutzer.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-user"></i>
                 <span>Nutzer</span>
             </a>
         </li>
 
         <!-- Nav Item - Maschinen -->
         <li class="nav-item active">
-            <a class="nav-link" href="maschinen.html">
-                <i class="fas fa-fw fa-cog"></i>
+            <a class="nav-link" href="../maschinen/maschinen.html">
+                <i class="fas fa-cog"></i>
                 <span>Maschinen</span>
             </a>
         </li>
@@ -77,16 +71,17 @@
         <!-- Nav Item - Monitoring -->
         <li class="nav-item">
             <a class="nav-link" href="../monitoring/monitoring.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-tachometer-alt"></i>
                 <span>Monitoring</span>
             </a>
         </li>
-
-                <!-- Sidebar Toggler (Sidebar) -->
-                <div class="text-center d-none d-md-inline">
-                    <button class="rounded-circle border-0" id="sidebarToggle"></button>
-                </div>
-
+        
+        <!-- Sidebar Toggler (Sidebar) -->
+        <!--
+        <div class="text-center d-none d-md-inline">
+            <button class="rounded-circle border-0" id="sidebarToggle"></button>
+        </div>
+        -->
     </ul>
     <!-- End of Sidebar -->
 
@@ -98,42 +93,10 @@
 
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                <h1 class="h3 mb-0 text-gray-800">Maschine hinzufügen</h1>
-
-                <!-- Sidebar Toggle (Topbar) -->
-                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                    <i class="fa fa-bars"></i>
-                </button>
+                <h1 class="h3 mb-0 text-gray-800">Neue Maschine anlegen</h1>
 
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
-
-                    <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                    <li class="nav-item dropdown no-arrow d-sm-none">
-                        <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-search fa-fw"></i>
-                        </a>
-                        <!-- Dropdown - Messages -->
-                        <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
-                             aria-labelledby="searchDropdown">
-                            <form class="form-inline mr-auto w-100 navbar-search">
-                                <div class="input-group">
-                                    <input type="text" class="form-control bg-light border-0 small"
-                                           placeholder="Search for..." aria-label="Search"
-                                           aria-describedby="basic-addon2">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-primary" type="button">
-                                            <i class="fas fa-search fa-sm"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </li>
-
-
-                    <div class="topbar-divider d-none d-sm-block"></div>
 
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
@@ -142,9 +105,7 @@
                             Logout
                         </a>
                     </li>
-
                 </ul>
-
             </nav>
             <!-- End of Topbar -->
 
@@ -154,93 +115,42 @@
                     <!-- Form -->
                     <form>
                         <div class="form-group">
-                            <label for="inputMaschinenname">Maschinenname</label>
+                            <label for="inputMaschinenname">Maschinenname (Pflichtfeld)</label>
                             <input type="text" class="form-control" id="inputMaschinenname" placeholder="Maschinenname">
                         </div>
-                        <!-- Dropdown Menu -->
-                            <div class="mb-4 dropdown">
-                                <label style="margin-right: 10px;"> Berechtigungsstufe: </label>
-                                <select  class="btn btn-secondary dropdown-toggle" id="berechtigungsstufe">
-                                    <option class="dropdown-item" value="1">1</option>
-                                    <option class="dropdown-item" value="2">2</option>
-                                    <option class="dropdown-item"  value="3">3</option>
-                                </select>
-                            </div>
-                  
                         <div class="form-group">
-                            <label for="inputRüstzeiten">Rüstzeiten in Minuten (optional)</label>
-                            <input type="number" class="form-control" id="inputRüstzeiten" placeholder="Rüstzeiten">
+                            <label for="inputStromphasen">Anzahl der Stromphasen (Pflichtfeld)</label>
+                            <input type="number" class="form-control" id="inputStromphasen" placeholder="Anzahl Stromphasen">
                         </div>
                         <div class="form-group">
-                            <label for="inputKosten">Kosten (optional)</label>
-                            <input type="number" class="form-control" id="inputKosten" placeholder="Watt/h, Fixkosten oder Materialkosten">
-                        </div>
-                        <div class="form-group">
-                            <label for="inputMaterialverbrauch">Materialverbrauch (optional)</label>
-                            <input type="number" class="form-control" id="inputMaterialverbrauch" placeholder="Verschleiß oder Verbauch/Zeit">
+                            <label for="inputFixKosten">Fixkosten pro Nutzung (optional)</label>
+                            <input type="number" class="form-control" id="inputFixKosten" placeholder="Fixkosten in €">
                         </div>
                         <div class="form-group">
                             <label for="inputBereich">Bereich (optional)</label>
                             <input type="text" class="form-control" id="inputBereich" placeholder="Raum/Bereich">
                         </div>
-                        <div class="form-group">
-                            <label for="inputFaktor">Faktor (optional)</label>
-                            <input type="number" class="form-control" id="inputFaktor" placeholder="Faktor">
+
+                        <!-- Dropdown Menu -->
+                        <div class="mb-4 dropdown">
+                            <label style="margin-right: 10px;">Berechtigungsstufe:</label>
+                            <select  class="btn btn-secondary dropdown-toggle" id="berechtigungsstufe">
+                                <option class="dropdown-item" value="1">1 (niedrig)</option>
+                                <option class="dropdown-item" value="2">2 (mittel)</option>
+                                <option class="dropdown-item"  value="3" selected="selected">3 (hoch)</option>
+                            </select>
                         </div>
                     </form>
                     <div>
                         <!-- Edit and Remove Buttons -->
                         <a href="maschinen.html" type="button" class="mr-4 btn btn-primary" role="button" ><i class="fas fa-arrow-left"></i></a>
-                        <button id="addMachineButton" onclick="addNewMachine()" type="button" class="btn btn-primary"><i class="fas fa-plus"></i></button>
+                        <button id="addMachineButton" onclick="checkIfMachineExists()" type="button" class="btn btn-primary"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
             </div>
 
              <!-- snackbar -->
              <meta name="viewport" content="width=device-width, initial-scale=1">
-             <style>
-             #snackbar {
-             visibility: hidden;
-             min-width: 250px;
-             margin-left: -125px;
-             background-color: #333;
-             color: #fff;
-             text-align: center;
-             border-radius: 2px;
-             padding: 16px;
-             position: fixed;
-             z-index: 1;
-             left: 50%;
-             bottom: 30px;
-             font-size: 17px;
-             }
- 
-             #snackbar.show {
-             visibility: visible;
-             -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-             animation: fadein 0.5s, fadeout 0.5s 2.5s;
-             }
- 
-             @-webkit-keyframes fadein {
-             from {bottom: 0; opacity: 0;} 
-             to {bottom: 30px; opacity: 1;}
-             }
- 
-             @keyframes fadein {
-             from {bottom: 0; opacity: 0;}
-             to {bottom: 30px; opacity: 1;}
-             }
- 
-             @-webkit-keyframes fadeout {
-             from {bottom: 30px; opacity: 1;} 
-             to {bottom: 0; opacity: 0;}
-             }
- 
-             @keyframes fadeout {
-             from {bottom: 30px; opacity: 1;}
-             to {bottom: 0; opacity: 0;}
-             }
-             </style>
              <div id="snackbar"></div>
 
             <!-- /.container-fluid -->
