--- a/uibuilder/bauer_planer/src/pages/nutzer/nutzer.html
+++ b/uibuilder/bauer_planer/src/pages/nutzer/nutzer.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>bauer + planer - Nutzer</title>
+    <title>Monitoring - Nutzerverwaltung</title>
 
     <!-- Custom fonts for this template-->
     <link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">b+p </div>
+            <div class="sidebar-brand-text mx-3">B+P</div>
         </a>
 
         <!-- Divider -->
@@ -46,22 +46,18 @@
         <!-- Nav Item - Übersicht -->
         <li class="nav-item">
             <a class="nav-link" href="../übersicht/übersicht.html">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Übersicht</span></a>
+                <i class="fas fa-home"></i>
+                <span>Übersicht</span>
+            </a>
         </li>
 
         <!-- Divider -->
-        <hr class="sidebar-divider">
-
-        <!--        &lt;!&ndash; Heading &ndash;&gt;-->
-        <!--        <div class="sidebar-heading">-->
-        <!--            Interface-->
-        <!--        </div>-->
+        <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Nutzer -->
         <li class="nav-item active">
-            <a class="nav-link" href="nutzer.html">
-                <i class="fas fa-fw fa-cog"></i>
+            <a class="nav-link" href="../nutzer/nutzer.html">
+                <i class="fas fa-user"></i>
                 <span>Nutzer</span>
             </a>
         </li>
@@ -69,7 +65,7 @@
         <!-- Nav Item - Maschinen -->
         <li class="nav-item">
             <a class="nav-link" href="../maschinen/maschinen.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-cog"></i>
                 <span>Maschinen</span>
             </a>
         </li>
@@ -77,16 +73,17 @@
         <!-- Nav Item - Monitoring -->
         <li class="nav-item">
             <a class="nav-link" href="../monitoring/monitoring.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-tachometer-alt"></i>
                 <span>Monitoring</span>
             </a>
         </li>
-
+        
         <!-- Sidebar Toggler (Sidebar) -->
+        <!--
         <div class="text-center d-none d-md-inline">
             <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
-
+        -->
     </ul>
     <!-- End of Sidebar -->
 
@@ -100,40 +97,8 @@
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
                 <h1 class="h3 mb-0 text-gray-800">Nutzerverwaltung</h1>
 
-                <!-- Sidebar Toggle (Topbar) -->
-                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                    <i class="fa fa-bars"></i>
-                </button>
-
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
-
-                    <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                    <li class="nav-item dropdown no-arrow d-sm-none">
-                        <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-search fa-fw"></i>
-                        </a>
-                        <!-- Dropdown - Messages -->
-                        <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
-                             aria-labelledby="searchDropdown">
-                            <form class="form-inline mr-auto w-100 navbar-search">
-                                <div class="input-group">
-                                    <input type="text" class="form-control bg-light border-0 small"
-                                           placeholder="Search for..." aria-label="Search"
-                                           aria-describedby="basic-addon2">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-primary" type="button">
-                                            <i class="fas fa-search fa-sm"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </li>
-
-
-                    <div class="topbar-divider d-none d-sm-block"></div>
 
                      <!-- Nav Item - User Information -->
                      <li class="nav-item dropdown no-arrow">
