--- a/uibuilder/bauer_planer/src/pages/übersicht/übersicht.html
+++ b/uibuilder/bauer_planer/src/pages/übersicht/übersicht.html
@@ -63,7 +63,7 @@
         <!-- Nav Item - Maschinen -->
         <li class="nav-item">
             <a class="nav-link" href="../maschinen/maschinen.html">
-                <i class="fas fa-fw fa-cog"></i>
+                <i class="fas fa-cog"></i>
                 <span>Maschinen</span>
             </a>
         </li>
@@ -71,7 +71,7 @@
         <!-- Nav Item - Monitoring -->
         <li class="nav-item">
             <a class="nav-link" href="../monitoring/monitoring.html">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
+                <i class="fas fa-tachometer-alt"></i>
                 <span>Monitoring</span>
             </a>
         </li>
