--- a/uibuilder/bauer_planer/src/pages/übersicht/übersichtNormalerNutzer.html
+++ b/uibuilder/bauer_planer/src/pages/übersicht/übersichtNormalerNutzer.html
@@ -149,6 +149,47 @@
     </div>
 </div>
 
+<!-- Entry Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Eintrag</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+            <table id="entryTable" 
+                data-search="false"                   
+                data-height="75%">
+            </table>
+            <br>
+            <p class="mb-3" style="font-weight: bold;">Notiz:</p>
+
+            <!--TODO style auslagern-->
+            <textarea 
+                id="message" 
+                rows="4" 
+                placeholder="Hier eine Notiz anlegen..." 
+                style="display: block;
+                width: 100%;
+                overflow: hidden;
+                resize: both;
+                min-height: 40px;
+                line-height: 20px;">
+            </textarea>
+            <br>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
+          <button type="button" class="btn btn-primary" onclick="saveMessage()" data-dismiss="modal" aria-label="Close">Nachricht speichern</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <!-- Bootstrap core JavaScript-->
 <script src="../../vendor/jquery/jquery.min.js"></script>
 <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
