--- a/uibuilder/monitoring/src/pages/changePassword/changePassword.html
+++ b/uibuilder/monitoring/src/pages/changePassword/changePassword.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Monitoring - Login</title>
+    <title>Monitoring - Passwort ändern</title>
     <meta name="description" content="Node-RED uibuilder - Blank template">
     <link rel="icon" href="../../favicon.ico">
     <script src="../../generalFunctions.js"></script>
 
     <!-- Your own CSS -->
-    <link type="text/css" rel="stylesheet" href="login.css" media="all">
+    <link type="text/css" rel="stylesheet" href="changePassword.css" media="all">
     
 </head><body class="uib">
   <div class="login-root">
@@ -24,35 +24,46 @@
       </div>
       <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
         <div class="box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center">
-          <h1>Anmeldung</h1>
+          <h1>Passwort ändern</h1>
         </div>
         <div class="formbg-outer">
           <div class="formbg">
             <div class="formbg-inner padding-horizontal--48">
 
                 <div class="field padding-bottom--24">
-                  <label for="userid">Benutzer ID</label>
-                  <input id="userID" type="number" placeholder="ID" name="uname" >
+                  <label for="newPassword">Neues Passwort</label>
+                  <input id="newPassword" type="password" placeholder="Neues Passwort">
                 </div>
                 <div class="field padding-bottom--24">
                   <div class="grid--50-50">
-                    <label for="password">Passwort</label>
+                    <label for="retypePassword">Passwort wiederholen</label>
                   </div>
-                  <input id="password" placeholder="Passwort" type="password" name="psw" >
+                  <input id="retypePassword" placeholder="Passwort wiederholen" type="password">
                 </div>
-                    <div id="error" class="error"></div>    
+
                 <div class="field field-checkbox padding-bottom--24 flex-flex align-center">
                     </div>
                 <div class="field padding-bottom--24">
-                  <input id="loginButton" type="submit" name="loginButton" onclick=login() value="Login">
+                  <!-- <input id="goBackButton" type="reset" onclick=goBackInHistory()> -->
+
+                  <input id="changePasswordButton" type="submit" onclick=changePassword() value="Speichern">
+
                 </div>
-                  <div class="field padding-bottom--24">
+                
+                <div class="field padding-bottom--24">
+                  <input id="changePasswordButton" type="submit" onclick="history.back()" value="Zurück">
                 </div>
-                  <pre id="msg" class="syntax-highlight"></pre>
+
+
+                <div class="mt-4" id="passwordResetMessage" style="display: none;">
+                  <p id="passwordResetText" style="text-align: center;"></p>
+                </div>
+
+                <pre id="msg" class="syntax-highlight"></pre>
     <!-- #region Supporting Scripts. These MUST be in the right order. Note no leading / -->
     <script src="../../../uibuilder/vendor/socket.io/socket.io.js">/* REQUIRED: Socket.IO is loaded only once for all instances. Without this, you don't get a websocket connection */</script>
     <script src="../../uibuilderfe.min.js">/* REQUIRED: remove 'min.' to use dev version */</script>
-    <script src="login.js">/* OPTIONAL: Put your custom code here */</script>
+    <script src="changePassword.js">/* OPTIONAL: Put your custom code here */</script>
     <!-- #endregion -->
             </div>
           </div>
