--- a/uibuilder/monitoring/src/pages/nutzer/nutzer_anlegen.html
+++ b/uibuilder/monitoring/src/pages/nutzer/nutzer_anlegen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
 
@@ -10,6 +10,9 @@
     <meta name="author" content="">
 
     <title>Monitoring - Nutzer anlegen</title>
+
+    <script type="text/javascript" src="../../sidebar.js"></script>
+    <script type="text/javascript" src="../../modals.js"></script>
 
     <!-- Custom fonts for this template-->
     <link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -22,6 +25,8 @@
 
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.css">
 
+    <link rel="icon" href="../../favicon.ico">
+
 </head>
 
 <body id="page-top">
@@ -29,63 +34,13 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
 
-    <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-
-        <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="../übersicht/übersicht.html">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
-            </div>
-            <div class="sidebar-brand-text mx-3">B+P</div>
-        </a>
-
-        <!-- Divider -->
-        <hr class="sidebar-divider my-0">
-
-        <!-- Nav Item - Übersicht -->
-        <li class="nav-item">
-            <a class="nav-link" href="../übersicht/übersicht.html">
-                <i class="fas fa-home"></i>
-                <span>Übersicht</span>
-            </a>
-        </li>
-
-        <!-- Divider -->
-        <hr class="sidebar-divider my-0">
-
-        <!-- Nav Item - Nutzer -->
-        <li class="nav-item active">
-            <a class="nav-link" href="../nutzer/nutzer.html">
-                <i class="fas fa-user"></i>
-                <span>Nutzer</span>
-            </a>
-        </li>
-
-        <!-- Nav Item - Maschinen -->
-        <li class="nav-item">
-            <a class="nav-link" href="../maschinen/maschinen.html">
-                <i class="fas fa-cog"></i>
-                <span>Maschinen</span>
-            </a>
-        </li>
-
-        <!-- Nav Item - Monitoring -->
-        <li class="nav-item">
-            <a class="nav-link" href="../monitoring/monitoring.html">
-                <i class="fas fa-tachometer-alt"></i>
-                <span>Monitoring</span>
-            </a>
-        </li>
-        
-        <!-- Sidebar Toggler (Sidebar) -->
-        <!--
-        <div class="text-center d-none d-md-inline">
-            <button class="rounded-circle border-0" id="sidebarToggle"></button>
-        </div>
-        -->
+       <!-- Sidebar -->
+       <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
     </ul>
-    <!-- End of Sidebar -->
+
+    <script>
+        document.getElementById("accordionSidebar").innerHTML = renderSidebar("user");
+    </script>
 
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -117,13 +72,10 @@
                 <div class="card shadow p-4">
                     <!-- Form -->
                     <form>
+
                         <div class="form-group">
-                            <label for="inputVorname">Vorname (optional)</label>
-                            <input type="text" class="form-control" id="inputVorname" placeholder="Vorname">
-                        </div>
-                        <div class="form-group">
-                            <label for="inputNachname">Nachname/Beschreibung (Pflichtfeld)</label>
-                            <input type="text" class="form-control" id="inputNachname" placeholder="Nachname">
+                            <label for="userID">UserID</label>
+                            <input type="number" class="form-control" id="userID">
                         </div>
                         <div class="mb-4 form-check">
                             <input 
@@ -131,13 +83,15 @@
                                 type="checkbox" 
                                 value="" 
                                 id="inputAdmin"
-                                onclick='isAdmin(this)'
                                 style="width: 20px; height: 20px; vertical-align: middle; position: relative;">
                             <label class="form-check-label" for="defaultCheck1" style="vertical-align: sub; margin-left: 5px;">Adminrechte</label>
+
                         </div>
                         <div class="form-group">
-                            <label for="inputPasswort"><span id="passwordLabel" class="mb-4"></span></label>
-                            <input type="password" class="form-control" id="inputPasswort" placeholder="Passwort">
+                            <label for="inputPassword"><span id="passwordLabel" class="mb-4"></span></label>
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Passwort">
+                            <input type="checkbox" id="showPassword" style="width: 13px; height: 13px; vertical-align: middle; position: relative;" onclick="togglePasswordInputType(this.checked)">
+                            <label class="form-check-label" for="showPassword" style="margin-left: 5px; font-size: 85%;">Passwort anzeigen</label>
                         </div>
                         <div class="form-group">
                             <label for="inputFirma">Firma (optional)</label>
@@ -194,24 +148,13 @@
 </a>
 
 <!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Bereit zu gehen?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">Wählen Sie "Abmelden", wenn Sie bereit sind, Ihre aktuelle Sitzung zu beenden.</div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Abbrechen</button>
-                <a class="btn btn-primary" href="../login/login.html">Abmelden</a>
-            </div>
-        </div>
-    </div>
-</div>
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"></div>
+<!-- Info Modal -->
+<div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModal" aria-hidden="true"></div>
+
+<script>
+    document.getElementById("logoutModal").innerHTML = renderLogoutModal();
+</script>
 
 <!-- Bootstrap core JavaScript-->
 <script src="../../vendor/jquery/jquery.min.js"></script>
@@ -230,6 +173,7 @@
 <script src="../../../uibuilder/vendor/socket.io/socket.io.js">/* REQUIRED: Socket.IO is loaded only once for all instances. Without this, you don't get a websocket connection */</script>
 <script src="../../uibuilderfe.min.js">/* REQUIRED: remove 'min.' to use dev version */</script>
 <script src="nutzer_anlegen.js">/* OPTIONAL: Put your custom code here */</script>
+<script src="../../generalFunctions.js"></script>
 <!-- #endregion -->
 
 </body>
